--- a/gradetracker/templates/gradetracker/base.html
+++ b/gradetracker/templates/gradetracker/base.html
@@ -7,11 +7,11 @@
 <body>
     <nav>
         <ul>
-            {% if user.is_authenticated %}
+            <!-- {% if user.is_authenticated %}
             <a href="{% url 'logout' %}">Logout</a>
             {% else %}
                 <li><a href="{% url 'login' %}">Login</a></li>
-            {% endif %}
+            {% endif %} -->
         </ul>
     </nav>
 
