--- a/gradetracker/templates/gradetracker/grades.html
+++ b/gradetracker/templates/gradetracker/grades.html
@@ -1,23 +1,63 @@
 {% extends "gradetracker/base.html" %}
-
+{% load static %}
 {% block content %}
-<h2>Your Grades</h2>
-<table>
-    <tr>
-        <th>Assignment</th>
-        <th>Score</th>
-        <th>Feedback</th>
-    </tr>
-    {% for grade in grades %}
-    <tr>
-        <td>{{ grade.assignment.title }}</td>
-        <td>{{ grade.score }}</td>
-        <td>{{ grade.feedback }}</td>
-    </tr>
-    {% empty %}
-    <tr>
-        <td colspan="3">No grades available.</td>
-    </tr>
-    {% endfor %}
-</table>
+<!DOCTYPE html>
+<html>
+
+  <head>
+
+    <!-- meta tags and title -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GradeHero: Never Slip on Your Classes</title>
+    <link rel="shortcut icon" type="image/png" href="logocutout-01.png"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Silkscreen&display=swap" rel="stylesheet">
+
+
+    <!-- external and on-page CSS goes here -->
+    <link rel="stylesheet" href="{% static 'grades.css' %}" media="all">
+    <style>
+      /* on-page CSS, if any, goes here -- otherwise delete this section */
+    </style>
+
+    <!-- external and on-page JavaScript goes here -->
+    <script src="https://kit.fontawesome.com/dc4b9d6624.js" crossorigin="anonymous"></script>
+    <script>
+      // on-page JavaScript, if any, goes here -- otherwise delete this section
+    </script>
+
+  </head>
+  <body>
+    <div class="over_flex">
+
+      <div class="over_flex_item" id="sidebar">
+        <img src="{% static 'sidebar_graphic-01.png' %}" alt="Gradient Graphic">
+        <img src="{% static 'user_icon-01.png' %}" id="user_icon">
+        <a href="{% url 'logout' %}" id="logout_button">Logout</a>
+      </div>
+
+
+      <div class="over_flex_item_right" id="course">
+        <a href="{% url 'home' %}" id="back_button">Return to home screen</a>
+        <h1> DTC 101 </h1>
+        <hr>
+        {% for grade in grades %}
+        <div class="assignment">
+          <h2> {{ grade.assignment.title }}</h2>
+          <h3>Grade: {{ grade.score }}/100</h3>
+          <div class="comment_box">
+            <h3> {{ grade.feedback }}</h3>
+          </div>
+         </div> 
+         {% endfor %}
+        <h1> Overall Grade: 90.2/100 </h1>
+      </div>
+
+    </div>
+  </body>
+  
+</html>
 {% endblock %}
