--- a/gradetracker/templates/gradetracker/login.html
+++ b/gradetracker/templates/gradetracker/login.html
@@ -12,19 +12,30 @@
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Silkscreen&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&family=Silkscreen&display=swap" rel="stylesheet">
 
-
-		<!-- external and on-page CSS goes here -->
 		<link rel="stylesheet" href="{% static 'login.css' %}" media="all">
 		<style>
 			
+			#login_actions {
+				display: flex;
+				align-items: center;
+				gap: 15px; 
+			}
+			#forgot_password {
+				font-size: 0.9em;
+				color: #007BFF;
+				text-decoration: none;
+			}
+			#forgot_password:hover {
+				text-decoration: underline;
+			}
 		</style>
 
-		<!-- external and on-page JavaScript goes here -->
+		
 		<script src="https://kit.fontawesome.com/dc4b9d6624.js" crossorigin="anonymous"></script>
 		<script>
-			// on-page JavaScript, if any, goes here -- otherwise delete this section
+			
 		</script>
 
 	</head>
@@ -40,7 +51,10 @@
   				<form action="{% url 'login' %}" method="POST">
                     {% csrf_token %}
                     {{ form.as_p }}
-        			<button type="submit" id="login_button">Login</button>
+                    <div id="login_actions">
+                        <button type="submit" id="login_button">Login</button>
+                        <a href="{% url 'password_reset' %}" id="forgot_password">Forgot Password?</a>
+                    </div>
   				</form>
   			</div>
 		</div>
